[package]
name = "bulk-gcd"
description = "Fast parallel bulk GCD computation for finding weak RSA keys in a set"
version = "0.1.3"
authors = ["Fedor Indutny <fedor@indutny.com>"]
repository = "https://github.com/indutny/bulk-gcd"
license = "MIT"
keywords = ["bulk","gcd","fastgcd"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
rayon = "^1.0.3"
log = "^0.4.6"
env_logger = "^0.6.0"

[dependencies.rug]
version = "^1.2.2"
default-features = false
features = ["integer"]

[badges]
travis-ci = { repository = "indutny/bulk-gcd" }
