[package]
name = "bulk-gcd"
description = "Fast parallel bulk GCD computation for finding weak RSA keys in a set"
version = "2.2.0"
authors = ["Fedor Indutny <fedor@indutny.com>"]
repository = "https://github.com/indutny/bulk-gcd"
license = "MIT"
keywords = ["bulk","gcd","fastgcd"]
categories = ["cryptography"]
readme = "README.md"
exclude = [".travis.yml"]

[dependencies]
clap = "^2.32.0"
env_logger = "^0.6.0"
log = "^0.4.6"
rayon = "^1.0.3"

[dependencies.rug]
version = "^1.2.2"
default-features = false
features = ["integer"]

[badges]
travis-ci = { repository = "indutny/bulk-gcd" }
